# aegis

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  EVALUATION.md  README.md  TEST-RUN-RESULTS.md  TRACKS.md  get-real-wallet.mjs  package-lock.json  package.json  pnpm-lock.yaml  prompt.md  qvac-hurdles.md  real-wallet-transactions.mjs  router.js  test-real-tx.mjs  test-upgraded-zerion.mjs  validate-real-apis.mjs  zerion.js
cli/: router.js  zerion.js
cli/commands/: chat.js  daemon.js  mcp.js  studio.js
cli/policies/: cooldown.mjs  spend-limit.mjs
commands/: chat.js  mcp.js
commands/trading/: bridge.js  send.js  swap.js
docs/: architecture.mdx  changelog.mdx  cli-reference.mdx  development.mdx  docs.json  frontier-checklist.mdx  how-aegis-works.mdx  index.mdx  mcp-codex.md  mcp-codex.mdx  models.mdx  package.json  pnpm-lock.yaml  policies.mdx  private-execution.mdx  quickstart.mdx  qvac.mdx  studio.mdx  track-evidence.mdx  what-we-built.mdx  x402-endpoints.mdx
engine/: config.mjs  daemon-supervisor.mjs  index.mjs  mcp-server.mjs
engine/agent/: db-budget.mjs  db-memory.mjs  index.mjs  resolve-model.mjs  skills.mjs  system-prompt.mjs  (+2 more)
policies/: README.md  cooldown.mjs  price-guard.mjs  spend-limit.mjs  time-window.mjs
prisma/: schema.prisma
scripts/: db-init.mjs  demo.mjs  judge-status.mjs  judge-trace.mjs  local-mode.mjs  qvac-backfill.mjs  qvac-download-models.mjs  seed-demo-wallet.mjs  showcase-tri-track.mjs  wrap-sol.mjs
tui/: Cargo.toml
tui/src/: app.rs  ipc.rs  main.rs  ui.rs
web/: brand.md  package.json  pnpm-lock.yaml  tailwind.config.ts
(+200 files in other folders)
