[package]
name = "aegis-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }
tokio      = { version = "1", features = ["full"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
arboard    = "3"
futures    = { version = "0.3", default-features = false, features = ["std"] }
